test/spectrum/examples/good/static_call.clj
(ns spectrum.examples.good.static-call)

(defn foo []
  (clojure.lang.RT/classForName "java.lang.String"))
