test/spectrum/examples/bad/static_add.clj
(ns spectrum.examples.bad.static-add)

(defn foo []
  (+ 1 "bogus"))
